--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "date-fns": "^3.3.1",
     "embla-carousel-react": "^8.0.0-rc22",
     "framer-motion": "^11.0.5",
+    "framer-motion-3d": "^12.4.13",
     "input-otp": "^1.1.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
