--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.161.0",
-    "tsparticles": "^3.2.1",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
     "typescript": "^5.3.3",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
