--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.2.2",
+    "@tsparticles/all": "^3.8.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
@@ -60,7 +63,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-intersection-observer": "^9.8.0",
-    "react-particles": "^2.12.2",
     "react-resizable-panels": "^2.0.9",
     "recharts": "^2.12.0",
     "sonner": "^1.4.0",
@@ -68,8 +70,6 @@
     "tailwindcss": "^3.4.1",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.161.0",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0",
     "typescript": "^5.3.3",
     "vaul": "^0.9.0",
     "zod": "^3.22.4"
